<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".postulante.LoginPostulanteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_titulo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_postulante"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/logo_postulante"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/article_person_24px"
            android:contentDescription="@string/Label_login_empleador"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:startIconDrawable="@drawable/alternate_email_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_correoPos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico_postulante"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:startIconDrawable="@drawable/key_vertical_24px"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_contrasenaPos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña_postulante"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_loginPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="18dp"
            android:text="@string/iniciar_sesion_postulante"
            android:layout_marginTop="14dp"
            android:gravity="center"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/btnLoginGoogle"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:contentDescription="@string/google_sign_in"
                android:padding="8dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="google.json"
                app:lottie_loop="true" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
            android:id="@+id/tv_ir_registroPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿No tienes cuenta? Regístrate"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>