<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCargo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/outline_emoji_people_24"
            app:startIconContentDescription="@string/hint_cargo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCargo"
                android:hint="@string/hint_cargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_cargo"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/outline_drafts_24"
            app:startIconContentDescription="@string/hint_descripcion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:hint="@string/hint_descripcion"
                android:minLines="4"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_descripcion" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilModalidad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:endIconMode="dropdown_menu"
            app:endIconDrawable="@drawable/outline_connect_without_contact_24"
            app:endIconContentDescription="@string/hint_modalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <AutoCompleteTextView
                android:id="@+id/actvModalidad"
                android:hint="@string/hint_modalidad"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_modalidad"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUbicacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/outline_file_map_24"
            app:startIconContentDescription="@string/hint_ubicacion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUbicacion"
                android:hint="@string/hint_ubicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_ubicacion" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPagoAprox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/outline_attach_money_24"
            app:startIconContentDescription="@string/hint_pago_aprox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPagoAprox"
                android:hint="@string/hint_pago_aprox"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_pago_aprox" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFechaLimite"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/baseline_calendar_month_24"
            app:startIconContentDescription="@string/hint_fecha_limite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaLimite"
                android:hint="@string/hint_fecha_limite"
                android:inputType="none"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_fecha_limite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPublicar"
            android:text="@string/btn_publicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:contentDescription="@string/btn_publicar"/>

    </LinearLayout>
</ScrollView>